--- a/aboutus.html
+++ b/aboutus.html
@@ -301,21 +301,6 @@
 
     <!-- PRODUCTS -->
     <section id="products" class="bg-pink-100 p-4 sm:p-5">
-      <div class="flex justify-center items-center my-8 sm:my-12">
-        <span class="text-2xl sm:text-3xl mr-2">🍭</span>
-        <h1
-          class="text-xl sm:text-3xl md:text-4xl font-bold text-rose-600 text-center"
-          style="
-            font-size: calc(
-              1.5rem + (2rem - 1.5rem) * ((100vw - 222px) / (280 - 222))
-            );
-          "
-        >
-          Our Sweet Collection
-        </h1>
-        <span class="text-2xl sm:text-3xl ml-2">🍬</span>
-      </div>
-
       <div
         id="productGrid"
         class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-4 gap-4 sm:gap-6"
@@ -487,6 +472,7 @@
     ></script>
     <!-- Algolia scripts -->
     <script src="https://cdn.jsdelivr.net/npm/algoliasearch@4/dist/algoliasearch-lite.umd.js"></script>
-    <script src="script.js"></script>
+    <script src="cart.js"></script>
+    <script src="shop.js"></script>
   </body>
 </html>
