re-added icons in the footer

--- a/index.html
+++ b/index.html
@@ -630,51 +630,91 @@
     </section>
 
     <!-- FOOTER -->
-<footer class="bg-rose-500/80 text-rose-50 font-sans border-t border-rose-400">
-  <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10 grid grid-cols-1 md:grid-cols-3 gap-8">
+    <footer
+      class="bg-rose-500/80 text-rose-50 font-sans border-t border-rose-400"
+    >
+      <div
+        class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-10 grid grid-cols-1 md:grid-cols-3 gap-8"
+      >
+        <!-- Socials -->
+        <div class="flex flex-col space-y-2">
+          <p
+            class="uppercase font-extrabold text-rose-200 border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
+          >
+            Follow Us
+          </p>
+          <a
+            class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium"
+            ><i class="ri-tiktok-line"></i> TikTok</a
+          >
+          <a
+            class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium"
+            ><i class="ri-twitter-x-line"></i> Twitter</a
+          >
+          <a
+            class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium"
+            ><i class="ri-instagram-line"></i> Instagram</a
+          >
+        </div>
 
-    <!-- Socials -->
-    <div class="flex flex-col space-y-2">
-      <p class="uppercase font-extrabold text-rose-200 border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg">
-        Follow Us
-      </p>
-      <a class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium">TikTok</a>
-      <a class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium">Twitter</a>
-      <a class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium">Instagram</a>
-    </div>
+        <!-- Information -->
+        <div class="flex flex-col space-y-2">
+          <p
+            class="uppercase font-extrabold text-rose-200 border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
+          >
+            Information
+          </p>
+          <a
+            href="aboutus.html"
+            class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium"
+            >About</a
+          >
+          <a
+            href="contactus.html"
+            class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium"
+            >Contact</a
+          >
+          <a
+            href="faq.html"
+            class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium"
+            >FAQs</a
+          >
+        </div>
 
-    <!-- Information -->
-    <div class="flex flex-col space-y-2">
-      <p class="uppercase font-extrabold text-rose-200 border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg">
-        Information
-      </p>
-      <a href="aboutus.html" class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium">About</a>
-      <a href="contactus.html" class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium">Contact</a>
-      <a href="faq.html" class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium">FAQs</a>
-    </div>
+        <!-- More Sweetness -->
+        <div class="flex flex-col space-y-2">
+          <p
+            class="uppercase font-extrabold text-rose-200 border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg"
+          >
+            More Sweetness
+          </p>
+          <a
+            href="events.html"
+            class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium"
+            >Events</a
+          >
+          <a
+            href="jobs.html"
+            class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium"
+            >Jobs</a
+          >
+          <span class="italic text-pink-100 mt-2 max-w-xs font-light">
+            “Life is sweeter with sprinkles on top!” 🍬
+          </span>
+        </div>
+      </div>
 
-    <!-- More Sweetness -->
-    <div class="flex flex-col space-y-2">
-      <p class="uppercase font-extrabold text-rose-200 border-b-4 border-pink-300 w-max pb-1 tracking-wide text-lg">
-        More Sweetness
-      </p>
-      <a href="events.html" class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium">Events</a>
-      <a href="jobs.html" class="hover:text-pink-200 transition duration-300 cursor-pointer font-medium">Jobs</a>
-      <span class="italic text-pink-100 mt-2 max-w-xs font-light">
-        “Life is sweeter with sprinkles on top!” 🍬
-      </span>
-    </div>
-
-  </div>
-
-  <div class="mt-6 bg-rose-400/80">
-    <p class="py-2 text-sm text-center px-4 sm:px-6 lg:px-8">
-      <span class="text-pink-100 font-semibold">© 2025 Sunny Delights.</span>
-      <span class="text-pink-300 font-serif italic">All rights reserved.</span>
-    </p>
-  </div>
-</footer>
-
+      <div class="mt-6 bg-rose-400/80">
+        <p class="py-2 text-sm text-center px-4 sm:px-6 lg:px-8">
+          <span class="text-pink-100 font-semibold"
+            >© 2025 Sunny Delights.</span
+          >
+          <span class="text-pink-300 font-serif italic"
+            >All rights reserved.</span
+          >
+        </p>
+      </div>
+    </footer>
 
     <!-- alpine js -->
     <script
