--- a/index.html
+++ b/index.html
@@ -317,10 +317,10 @@
           >
             Soft as a Cloud Sweet as a Dream
           </div>
-          <p class="text-rose-400 text-sm sm:text-base opacity-70">
+          <p class="text-gray-700/80 sm:text-base md:text-lg font-medium">
             Indulge in sweetness crafted with love
           </p>
-          <p class="text-rose-400 text-sm sm:text-base opacity-60 pb-10">
+          <p class="text-gray-700/80 sm:text-base md:text-lg font-medium pb-10">
             From fluffy marshmallows to rich chocolates, every treat is made to
             brighten your day.
           </p>
@@ -391,40 +391,46 @@
       </div>
     </section>
 
-    <div class="w-full h-px border-t border-dashed border-rose-400 my-6"></div>
-
-    <div
-      class="w-full h-3 bg-gradient-to-r from-pink-100 via-rose-600 to-pink-200 shadow-md rounded"
-    ></div>
-
-    <div class="w-full h-px border-t border-dashed border-rose-400 my-6"></div>
-
-    <section class="bg-pink-100 p-4 sm:p-5">
-      <h1
-        class="text-2xl uppercase text-rose-600 p-6 underline underline-offset-8 font-bold"
-      >
-        New Arrivals
-      </h1>
+    <!-- DIVIDERS -->
+    <div class="dividers">
       <div
-        id="newProducts"
-        class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4"
+        class="w-full h-px border-t border-dashed border-rose-400 my-6"
       ></div>
-    </section>
-
-    <section class="bg-pink-100 p-4 sm:p-5">
-      <h1
-        class="text-2xl uppercase text-rose-600 p-6 underline underline-offset-8 font-bold"
-      >
-        Best Sellers
-      </h1>
-
       <div
-        id="bestSellers"
-        class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4"
+        class="w-full h-3 bg-gradient-to-r from-pink-100 via-rose-600 to-pink-200 shadow-md rounded"
       ></div>
-    </section>
+      <div
+        class="w-full h-px border-t border-dashed border-rose-400 my-6"
+      ></div>
+    </div>
 
-    <script src="index.js"></script>
+    <!-- NEW ARRIVALS AND BEST SELLERS -->
+    <section>
+      <div class="p-4 sm:p-5">
+        <h1
+          class="text-2xl uppercase text-rose-600 p-6 underline underline-offset-8 font-bold"
+        >
+          New Arrivals
+        </h1>
+        <div
+          id="newProducts"
+          class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4"
+        ></div>
+      </div>
+
+      <div class="p-4 sm:p-5">
+        <h1
+          class="text-2xl uppercase text-rose-600 p-6 underline underline-offset-8 font-bold"
+        >
+          Best Sellers
+        </h1>
+
+        <div
+          id="bestSellers"
+          class="grid grid-cols-1 sm:grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4"
+        ></div>
+      </div>
+    </section>
 
     <!-- PRODUCTS -->
     <section id="products" class="bg-pink-100 p-4 sm:p-5">
@@ -507,70 +513,115 @@
       </button>
     </section>
 
-    <div class="w-full h-px border-t border-dashed border-rose-400 my-6"></div>
-
-    <div
-      class="w-full h-3 bg-gradient-to-r from-pink-100 via-rose-600 to-pink-200 shadow-md rounded"
-    ></div>
-
-    <div class="w-full h-px border-t border-dashed border-rose-400 my-6"></div>
+    <!-- DIVIDERS -->
+    <div class="dividers">
+      <div
+        class="w-full h-px border-t border-dashed border-rose-400 my-6"
+      ></div>
+      <div
+        class="w-full h-3 bg-gradient-to-r from-pink-100 via-rose-600 to-pink-200 shadow-md rounded"
+      ></div>
+      <div
+        class="w-full h-px border-t border-dashed border-rose-400 my-6"
+      ></div>
+    </div>
 
     <!-- BLOG -->
- <section id="blog" class="flex flex-col items-center bg-pink-50 py-16">
-  <!-- Intro Block -->
-  <div class="w-full max-w-4xl rounded-3xl p-8 sm:p-10 md:p-12 text-center">
-    <h2 class="text-2xl sm:text-3xl md:text-4xl font-bold text-rose-600 mb-4 tracking-tight">
-      Sweet Cakes & Delicious Treats
-    </h2>
-    <p class="text-gray-700/80 sm:text-base md:text-lg font-medium mb-2">
-      From layered cakes to handcrafted candies, every bite is made to delight
-    </p>
-    <p class="text-gray-700/80 sm:text-base md:text-lg font-medium">
-      Savor the sweetness that makes life a little brighter
-    </p>
-  </div>
-
-  <!-- Blog Cards Grid -->
-  <div class="w-full max-w-7xl mt-12 px-4 sm:px-6 lg:px-8">
-    <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
-      
-      <!-- Card Component -->
-      <div class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition overflow-hidden flex flex-col">
-        <img src="https://images.pexels.com/photos/2236703/pexels-photo-2236703.jpeg" alt="Blog 1" class="w-full h-48 object-cover"/>
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="text-xl font-semibold text-rose-600 mb-2">5 Sweet Treats to Try This Summer</h3>
-          <p class="text-gray-700 text-sm mb-3 flex-1">
-            Discover refreshing candies and chocolates perfect for sunny days. Your taste buds will thank you!
-          </p>
-          <a href="#" class="text-rose-700 font-semibold hover:underline mt-auto">Read More →</a>
-        </div>
+    <section id="blog" class="flex flex-col items-center bg-pink-50 py-16">
+      <!-- Intro Block -->
+      <div class="w-full max-w-4xl rounded-3xl p-8 sm:p-10 md:p-12 text-center">
+        <h2
+          class="text-2xl sm:text-3xl md:text-4xl font-bold text-rose-600 mb-4 tracking-tight"
+        >
+          Sweet Cakes & Delicious Treats
+        </h2>
+        <p class="text-gray-700/80 sm:text-base md:text-lg font-medium">
+          From layered cakes to handcrafted candies, every bite is made to
+          delight
+        </p>
+        <p class="text-gray-700/80 sm:text-base md:text-lg font-medium">
+          Savor the sweetness that makes life a little brighter
+        </p>
       </div>
 
-      <div class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition overflow-hidden flex flex-col">
-        <img src="https://images.pexels.com/photos/6441630/pexels-photo-6441630.jpeg" alt="Blog 2" class="w-full h-48 object-cover"/>
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="text-xl font-semibold text-rose-600 mb-2">The Art of Chocolate Making</h3>
-          <p class="text-gray-700 text-sm mb-3 flex-1">
-            Dive into the process of creating rich, decadent chocolates from bean to bar.
-          </p>
-          <a href="#" class="text-rose-700 font-semibold hover:underline mt-auto">Read More →</a>
+      <!-- Blog Cards Grid -->
+      <div class="w-full max-w-7xl mt-12 px-4 sm:px-6 lg:px-8">
+        <div class="grid grid-cols-1 sm:grid-cols-2 lg:grid-cols-3 gap-6">
+          <!-- Card Component -->
+          <div
+            class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition overflow-hidden flex flex-col"
+          >
+            <img
+              src="https://images.pexels.com/photos/2236703/pexels-photo-2236703.jpeg"
+              alt="Blog 1"
+              class="w-full h-48 object-cover"
+            />
+            <div class="p-4 flex flex-col flex-1">
+              <h3 class="text-xl font-semibold text-rose-600 mb-2">
+                5 Sweet Treats to Try This Summer
+              </h3>
+              <p class="text-gray-700 text-sm mb-3 flex-1">
+                Discover refreshing candies and chocolates perfect for sunny
+                days. Your taste buds will thank you!
+              </p>
+              <a
+                href="#"
+                class="text-rose-700 font-semibold hover:underline mt-auto"
+                >Read More →</a
+              >
+            </div>
+          </div>
+
+          <div
+            class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition overflow-hidden flex flex-col"
+          >
+            <img
+              src="https://images.pexels.com/photos/6441630/pexels-photo-6441630.jpeg"
+              alt="Blog 2"
+              class="w-full h-48 object-cover"
+            />
+            <div class="p-4 flex flex-col flex-1">
+              <h3 class="text-xl font-semibold text-rose-600 mb-2">
+                The Art of Chocolate Making
+              </h3>
+              <p class="text-gray-700 text-sm mb-3 flex-1">
+                Dive into the process of creating rich, decadent chocolates from
+                bean to bar.
+              </p>
+              <a
+                href="#"
+                class="text-rose-700 font-semibold hover:underline mt-auto"
+                >Read More →</a
+              >
+            </div>
+          </div>
+
+          <div
+            class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition overflow-hidden flex flex-col"
+          >
+            <img
+              src="https://images.pexels.com/photos/10477126/pexels-photo-10477126.jpeg"
+              alt="Blog 3"
+              class="w-full h-48 object-cover"
+            />
+            <div class="p-4 flex flex-col flex-1">
+              <h3 class="text-xl font-semibold text-rose-600 mb-2">
+                Candy Pairings with Your Drinks
+              </h3>
+              <p class="text-gray-700 text-sm mb-3 flex-1">
+                Enhance your coffee, tea, or wine with the perfect candy pairing
+                tips from our experts.
+              </p>
+              <a
+                href="#"
+                class="text-rose-700 font-semibold hover:underline mt-auto"
+                >Read More →</a
+              >
+            </div>
+          </div>
         </div>
       </div>
-
-      <div class="bg-white rounded-2xl shadow-xl hover:shadow-2xl transition overflow-hidden flex flex-col">
-        <img src="https://images.pexels.com/photos/10477126/pexels-photo-10477126.jpeg" alt="Blog 3" class="w-full h-48 object-cover"/>
-        <div class="p-4 flex flex-col flex-1">
-          <h3 class="text-xl font-semibold text-rose-600 mb-2">Candy Pairings with Your Drinks</h3>
-          <p class="text-gray-700 text-sm mb-3 flex-1">
-            Enhance your coffee, tea, or wine with the perfect candy pairing tips from our experts.
-          </p>
-          <a href="#" class="text-rose-700 font-semibold hover:underline mt-auto">Read More →</a>
-        </div>
-      </div>
-
-    </div>
-  </div>
-</section>
+    </section>
 
     <!-- FOOTER -->
     <footer
