--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
         <div
           class="hidden lg:flex items-center gap-8 text-pink-100 font-semibold"
         >
-          <a href="index.html" class="hover:text-white transition-colors"
+          <a href="index.html" class="hover:text-whit transition-colors"
             >Home</a
           >
           <a href="aboutus.html" class="hover:text-white transition-colors"
@@ -640,16 +640,25 @@
           </p>
           <a
             class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
-            ><i class="ri-tiktok-line"></i> TikTok</a
           >
+            <span class="inline-block transition-transform hover:translate-x-2">
+              <i class="ri-tiktok-fill"></i> TikTok
+            </span>
+          </a>
           <a
             class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
-            ><i class="ri-twitter-x-line"></i> Twitter</a
           >
+            <span class="inline-block transition-transform hover:translate-x-2">
+              <i class="ri-twitter-x-fill"></i> Twitter
+            </span>
+          </a>
           <a
             class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
-            ><i class="ri-instagram-line"></i> Instagram</a
           >
+            <span class="inline-block transition-transform hover:translate-x-2">
+              <i class="ri-instagram-fill"></i> Instagram
+            </span>
+          </a>
         </div>
 
         <!-- Information -->
@@ -662,18 +671,27 @@
           <a
             href="aboutus.html"
             class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
-            >About</a
           >
+            <span class="inline-block transition-transform hover:translate-x-2"
+              >About</span
+            >
+          </a>
           <a
             href="contactus.html"
             class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
-            >Contact</a
           >
+            <span class="inline-block transition-transform hover:translate-x-2"
+              >Contact</span
+            >
+          </a>
           <a
             href="faq.html"
             class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
-            >FAQs</a
           >
+            <span class="inline-block transition-transform hover:translate-x-2"
+              >FAQs</span
+            >
+          </a>
         </div>
 
         <!-- More Sweetness -->
@@ -686,13 +704,19 @@
           <a
             href="events.html"
             class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
-            >Events</a
           >
+            <span class="inline-block transition-transform hover:translate-x-2"
+              >Events</span
+            >
+          </a>
           <a
             href="jobs.html"
             class="text-white transition duration-300 cursor-pointer font-medium px-2 py-1 rounded hover:bg-rose-600/70"
-            >Jobs</a
           >
+            <span class="inline-block transition-transform hover:translate-x-2"
+              >Jobs</span
+            >
+          </a>
           <span class="italic text-pink-100 mt-2 max-w-xs font-light">
             “Life is sweeter with sprinkles on top!” 🍬
           </span>
